--- a/satellite_experience/assets/css/high_contrast_styles.css
+++ b/satellite_experience/assets/css/high_contrast_styles.css
@@ -121,10 +121,12 @@ body {
 .modal-text {
     margin-top: 10px;
     /*background-color: rgba(255, 255, 255, 0.05);*/
-    /*background-color: #34254B;*/
-    background-color: #FFFFFF;
+    background-color: #34254B;
+    /*background-color: #FFFFFF;*/
     padding: 10px;
     border-radius: 5px;
+    border-style: solid;
+    border-color: #FFFAFA;
 }
 
 /* Settings Page/Modal */
