--- a/satellite_experience/assets/css/high_contrast_styles.css
+++ b/satellite_experience/assets/css/high_contrast_styles.css
@@ -125,8 +125,8 @@ body {
     /*background-color: #FFFFFF;*/
     padding: 10px;
     border-radius: 5px;
-    border-style: solid;
-    border-color: #FFFAFA;
+    /*border-style: solid;*/
+    /*border-color: #FFFAFA;*/
 }
 
 /* Settings Page/Modal */
