--- a/satellite_experience/assets/css/high_contrast_styles.css
+++ b/satellite_experience/assets/css/high_contrast_styles.css
@@ -124,6 +124,7 @@ body {
     background-color: #34254B;
     /*background-color: #FFFFFF;*/
     padding: 10px;
+    border: 2px;
     border-radius: 5px;
     border-style: solid;
     border-color: #FFFAFA;
