--- a/satellite_experience/assets/css/high_contrast_styles_v2.css
+++ b/satellite_experience/assets/css/high_contrast_styles_v2.css
@@ -53,7 +53,8 @@ body {
 }
 
 .modal-popup {
-    background-color: rgba(32, 22, 47, 0.8); /* Make background slightly opaque */
+    /*background-color: rgba(32, 22, 47, 0.8); /* Make background slightly opaque */
+    background-color: #FFFFFF;
     margin: 10% auto;
     padding: 20px;
     width: 80%;
@@ -83,7 +84,7 @@ body {
     margin-top: 0;
     padding-top: 10px;
     text-align: center;
-    color: black;
+    color: #000000;
 }
 
 .modal-close {
