--- a/satellite_experience/assets/css/high_contrast_styles_v2.css
+++ b/satellite_experience/assets/css/high_contrast_styles_v2.css
@@ -228,7 +228,7 @@ body {
 
 /* Loading screen */
 /* Loading container styling */
-        #loading-container {
+        .loading-container {
             position: fixed;
             inset: 0;
             /*background-color: #20162F;*/
@@ -247,6 +247,7 @@ body {
 
         /* Content styling */
         .loading-content {
+            color: #000000;
             position: absolute;
             bottom: 0px;
         }
