Removed color: #000000 from .loading-content

--- a/satellite_experience/assets/css/high_contrast_styles_v2.css
+++ b/satellite_experience/assets/css/high_contrast_styles_v2.css
@@ -247,7 +247,7 @@ body {
 
         /* Content styling */
         .loading-content {
-            color: #000000;
+            /*color: #000000;*/
             position: absolute;
             bottom: 0px;
         }
