--- a/satellite_experience/assets/css/high_contrast_styles.css
+++ b/satellite_experience/assets/css/high_contrast_styles.css
@@ -135,9 +135,13 @@ body {
     text-align: left;
     margin-bottom: 1px;
     margin-top: 10px;
-    background-color: rgba(255, 255, 255, 0.05);
+    /*background-color: rgba(255, 255, 255, 0.05);*/
+    background-color: #34254B;
     padding: 15px 10px;
+    border: 1px;
     border-radius: 5px;
+    border-style: solid;
+    border-color: #FFFFFF;
     display: flex;
     justify-content: space-between;
 }
