--- a/satellite_experience/assets/css/light_mode.css
+++ b/satellite_experience/assets/css/light_mode.css
@@ -53,13 +53,13 @@ body {
 }
 
 .modal-popup {
-  background-color: rgba(216, 211, 221, 1);
+  background-color: rgba(216, 211, 221, 1) !important;
   margin: 10% auto;
   padding: 20px;
   width: 80%;
   max-width: 375px;
   border-radius: 12px;
-  color: black;
+  color: black !important;
   position: relative;
   max-height: 90vh;
   overflow-y: auto;
@@ -86,7 +86,7 @@ body {
 }
 
 .modal-close {
-  color: black;
+  color: black !important;
   position: absolute;
   top: 10px;
   right: 20px;
@@ -121,7 +121,7 @@ body {
 
 .modal-text {
   margin-top: 10px;
-  background-color: rgba(255, 255, 255, 0.05);
+  background-color: rgba(255, 255, 255, 0.05) !important;
   padding: 10px;
   border-radius: 5px;
 }
@@ -131,12 +131,13 @@ body {
 .settings-modal-default-mode,
 .settings-modal-high-contrast-mode,
 .settings-modal-light-mode,
-.settings-modal-color-blind-mode {
+.settings-modal-color-blind-mode,
+.settings-modal-volume {
   width: 100%;
   text-align: left;
   margin-bottom: 1px;
   margin-top: 10px;
-  background-color: rgba(255, 255, 255, 1);
+  background-color: rgba(255, 255, 255, 1) !important;
   padding: 15px 10px;
   border-radius: 5px;
   display: flex;
@@ -153,6 +154,60 @@ body {
 #color-blind-mode {
   /* When the radio button is checked, add a blue background */
   accent-color: #f9a001;
+}
+
+/* Volume */
+input[type="range"] {
+  /* remove default appearance */
+  -webkit-appearance: none;
+  appearance: none;
+  /* custom design */
+  width: 50%;
+  cursor: pointer;
+  outline: none;
+  /*  slider progress  */
+  overflow: hidden;
+  border-radius: 16px;
+}
+
+/* Track: webkit browsers */
+input[type="range"]::-webkit-slider-runnable-track {
+  height: 15px;
+  background: #ccc;
+  border-radius: 16px;
+}
+
+/* Track: Mozilla Firefox */
+input[type="range"]::-moz-range-track {
+  height: 15px;
+  background: #ccc;
+  border-radius: 16px;
+}
+
+/* Thumb: webkit */
+input[type="range"]::-webkit-slider-thumb {
+  /* remove default appearance */
+  -webkit-appearance: none;
+  appearance: none;
+  /* custom design */
+  height: 15px;
+  width: 15px;
+  background-color: #fff;
+  border-radius: 50%;
+  border: 2px solid #f9a001;
+  /*  slider progress  */
+  box-shadow: -407px 0 0 400px #f9a001;
+}
+
+/* Thumb: Firefox */
+input[type="range"]::-moz-range-thumb {
+  height: 15px;
+  width: 15px;
+  background-color: #fff;
+  border-radius: 50%;
+  border: 1px solid #f9a001;
+  /*  slider progress  */
+  box-shadow: -407px 0 0 400px #f9a001;
 }
 
 /* End of Settings Page/Modal */
