--- a/satellite_experience/assets/css/high_contrast_mode.css
+++ b/satellite_experience/assets/css/high_contrast_mode.css
@@ -7,10 +7,245 @@ body {
   display: flex;
   padding: 0;
   margin: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: #000000;
+  overscroll-behavior: none;
 }
 
-/* Canvas Styling */
-#canvas {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* Main Container */
+#main-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding-top: 20px;
+  box-sizing: border-box;
+}
+
+/* Navigation Buttons Styling */
+.navigation-button-container {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 80%;
+  max-width: 800px;
+  z-index: 5;
+}
+
+.navigation-button {
+  width: 50%;
+  max-width: 300px;
+  height: 60px;
+  background-color: rgba(32, 22, 47, 0.8);
+  color: #fff;
+  border: 1px !important;
+  border-style: solid !important;
+  border-color: #ffffff !important;
+  border-radius: 10px;
+  font-size: 18px;
+  cursor: pointer;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.navigation-button:last-child {
+  margin-bottom: 0;
+}
+
+.navigation-button:hover {
+  background-color: rgba(32, 22, 47, 1);
+}
+
+/* Instrument Content Styling */
+#distanceTag {
+  position: relative;
+  width: 80%;
+  max-width: 600px;
+  background-color: rgba(32, 22, 47, 0.8);
+  border: 1px;
+  border-style: solid;
+  border-color: #ffffff;
+  border-radius: 10px;
+  color: #fff;
+  font-size: 16px;
+  padding: 20px;
+  margin: 0 auto;
+  z-index: 5;
+  box-sizing: border-box;
+}
+
+#instrument-content {
+  position: relative;
+  width: 80%;
+  max-width: 600px;
+  background-color: rgba(32, 22, 47, 0.8);
+  border: 1px;
+  border-style: solid;
+  border-color: #ffffff;
+  border-radius: 10px;
+  color: #fff;
+  font-size: 16px;
+  padding: 20px;
+  margin: 0 auto;
+  z-index: 5;
+  box-sizing: border-box;
+}
+
+#instrument-title-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #fff;
+  margin-bottom: 10px;
+}
+
+#instrument-title {
+  font-size: 24px;
+  color: #fff;
+  text-align: left;
+  margin: 0;
+}
+
+#instrument-content-container {
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px;
+  border-style: solid;
+  border-color: #ffffff;
+  border-radius: 10px;
+  padding: 15px;
+  color: #fff;
+  text-align: left;
+  margin-top: 10px;
+}
+
+#instrument-description {
+  font-size: 14px;
+  line-height: 1.5;
+  color: #fff;
+  margin-bottom: 10px;
+}
+
+#instrument-image {
+  height: 100%;
+  max-height: 150px;
+  border-radius: 10px;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
+
+/* Mission Content Styling */
+#mission-content {
+  position: relative;
+  width: 80%;
+  max-width: 600px;
+  background-color: rgba(32, 22, 47, 0.8);
+  border: 1px;
+  border-style: solid;
+  border-color: #ffffff;
+  border-radius: 10px;
+  color: #fff;
+  font-size: 16px;
+  padding: 20px;
+  margin: 0 auto;
+  margin-top: 150px;
+  z-index: 5;
+  box-sizing: border-box;
+}
+
+#phase-title-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #fff;
+  margin-bottom: 10px;
+}
+
+#phase-title {
+  font-size: 24px;
+  color: #fff;
+  text-align: left;
+  margin: 0;
+}
+
+#phase-content-container {
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px;
+  border-style: solid;
+  border-color: #ffffff;
+  border-radius: 10px;
+  padding: 15px;
+  color: #fff;
+  text-align: left;
+  margin-top: 10px;
+}
+
+#phase-description {
+  font-size: 14px;
+  line-height: 1.5;
+  color: #fff;
+  margin-bottom: 10px;
+}
+
+#phase-image {
+  height: 100%;
+  max-height: 150px;
+  border-radius: 10px;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
+
+#phase-transition-button-container {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  max-width: 600px;
+  margin: 10px auto 0;
+  border: 1px !important;
+  border-style: solid !important;
+  border-color: #ffffff !important;
+}
+
+#left-phase-transition-button,
+#right-phase-transition-button {
+  width: 48%;
+  height: 50px;
+  background-color: rgba(32, 22, 47, 0.8);
+  color: #fff;
+  border: 1px !important;
+  border-style: solid !important;
+  border-color: #ffffff !important;
+  border-radius: 10px;
+  font-size: 16px;
+  cursor: pointer;
+  text-align: center;
+  z-index: 5;
+}
+
+#left-phase-transition-button:hover,
+#right-phase-transition-button:hover {
+  background-color: rgba(32, 22, 47, 1);
+}
+
+/* Scene Styling */
+#scene {
   position: absolute;
   top: 0;
   left: 0;
@@ -27,7 +262,7 @@ body {
   width: 30px;
   height: 30px;
   cursor: pointer;
-  z-index: 2;
+  z-index: 10;
 }
 
 #settings-icon-button {
@@ -37,14 +272,14 @@ body {
   width: 30px;
   height: 30px;
   cursor: pointer;
-  z-index: 2;
+  z-index: 10;
 }
 
 /* Modal Styling */
 .modal {
   display: none; /* Hide modal by default */
   position: fixed;
-  z-index: 3;
+  z-index: 20;
   left: 0;
   top: 0;
   width: 100%;
@@ -58,19 +293,23 @@ body {
   padding: 20px;
   width: 80%;
   max-width: 375px;
+  border: 1px;
+  border-style: solid;
+  border-color: #ffffff;
   border-radius: 12px;
   color: white;
   position: relative;
   max-height: 90vh;
-  overflow-y: auto;
-  z-index: 3;
+  /*overflow-y: auto;*/
+  overflow: hidden;
+  z-index: 20;
 }
 
 .modal-logo-container {
   position: absolute;
   top: 10px;
   left: 10px;
-  z-index: 4;
+  z-index: 30;
 }
 
 .modal-logo {
@@ -93,7 +332,7 @@ body {
   font-size: 30px;
   font-weight: bold;
   cursor: pointer;
-  z-index: 4;
+  z-index: 40;
 }
 
 .modal-close:hover {
@@ -121,12 +360,12 @@ body {
 
 .modal-text {
   margin-top: 10px;
-  background-color: #34254b;
+  background-color: rgba(255, 255, 255, 0.05);
   padding: 10px;
   border: 1px;
-  border-radius: 5px;
   border-style: solid;
   border-color: #ffffff;
+  border-radius: 5px;
 }
 
 /* Settings Page/Modal */
@@ -135,18 +374,17 @@ body {
 .settings-modal-high-contrast-mode,
 .settings-modal-light-mode,
 .settings-modal-color-blind-mode,
-.settings-modal-volume{
+.settings-modal-volume {
   width: 100%;
   text-align: left;
   margin-bottom: 1px;
   margin-top: 10px;
-  /*background-color: rgba(255, 255, 255, 0.05);*/
-  background-color: #34254b;
+  background-color: rgba(255, 255, 255, 0.05);
   padding: 15px 10px;
   border: 1px;
-  border-radius: 5px;
   border-style: solid;
   border-color: #ffffff;
+  border-radius: 5px;
   display: flex;
   justify-content: space-between;
 }
@@ -159,7 +397,7 @@ body {
 #high-contrast-mode,
 #light-mode,
 #color-blind-mode {
-  /* When the radio button is checked, add a blue background */
+  /* When the radio button is checked, add a orange background */
   accent-color: #f9a001;
 }
 
@@ -174,6 +412,9 @@ input[type="range"] {
   outline: none;
   /*  slider progress  */
   overflow: hidden;
+  border: 1px;
+  border-style: solid;
+  border-color: #ffffff;
   border-radius: 16px;
 }
 
@@ -181,6 +422,9 @@ input[type="range"] {
 input[type="range"]::-webkit-slider-runnable-track {
   height: 15px;
   background: #ccc;
+  border: 1px;
+  border-style: solid;
+  border-color: #ffffff;
   border-radius: 16px;
 }
 
@@ -188,6 +432,9 @@ input[type="range"]::-webkit-slider-runnable-track {
 input[type="range"]::-moz-range-track {
   height: 15px;
   background: #ccc;
+  border: 1px;
+  border-style: solid;
+  border-color: #ffffff;
   border-radius: 16px;
 }
 
@@ -224,7 +471,7 @@ input[type="range"]::-moz-range-thumb {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: #20162f;
+  background-color: #ffffff;
   align-items: center;
   margin-left: 0vh;
   margin-right: 0vh;
@@ -234,21 +481,82 @@ input[type="range"]::-moz-range-thumb {
   padding-bottom: 25px;
   text-align: center;
 }
+#body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+}
+
+#psyche-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-image: linear-gradient(to right, #302144, #000000);
+  align-items: stretch;
+  width: calc(100% + 15px);
+  margin-left: -50px;
+  margin-right: -50px;
+  margin-top: -25px;
+  height: 15%;
+  padding-top: 5%;
+  padding-bottom: 25px;
+  padding-left: 10px;
+  padding-right: 75px;
+  text-align: center;
+}
 
 #psyche-icon {
-  align-self: flex-start;
-  height: 75px;
-  width: 75px;
-  margin-left: 0%;
+  align-self: center;
+  min-height: 75px;
+  min-width: 75px;
+  height: 15%;
+  width: 15%;
+  margin-left: 5%;
 }
 
 #disclaimer {
   font-size: 12px;
+  color: grey;
+  border-color: grey;
+  border-width: 20px;
 }
 
-#psyche-info {
+.psyche-info {
+  margin-top: 50px;
+  font-weight: bold;
   border: 2px solid white;
-  padding: 7px;
+  color: black;
+}
+
+.psyche-info-line {
+  font-family: "Helvetica", sans-serif;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 1.4;
+  text-align: center;
+  color: #302144;
+  letter-spacing: -1px;
+}
+
+.psyche-info-headline {
+  font-family: "Helvetica", sans-serif;
+  font-weight: normal;
+  font-size: 30px;
+  line-height: 1.4;
+  text-align: center;
+  color: #302144;
+  letter-spacing: -1px;
+}
+
+.psyche-info-list {
+  font-weight: normal;
+  color: black;
+  text-align: left;
+  align-self: center;
+  list-style-type: disc;
 }
 
 #launch-button {
@@ -256,14 +564,16 @@ input[type="range"]::-moz-range-thumb {
   margin-bottom: 25px;
   font-size: 20px;
   color: white;
-  background-color: #20162f;
-  border: 2px solid white;
+  font-weight: bold;
+  background-color: #f9a000;
+  border: 2px 50% black;
+  border-radius: 16px;
   height: 50px;
   width: 75%;
   cursor: pointer;
   transition:
-    background-color 0.3s,
-    transform 0.1s;
+          background-color 0.3s,
+          transform 0.1s;
 }
 
 #launch-button:active {
@@ -276,7 +586,7 @@ input[type="range"]::-moz-range-thumb {
   outline: none;
 }
 
-#psyche-satellite-img img {
+.psyche-satellite-img img {
   margin-top: 25px;
   width: 100%;
 }
@@ -288,18 +598,37 @@ input[type="range"]::-moz-range-thumb {
   }
 }
 
-/* Loading screen */
+.fade-in-section {
+  opacity: 0;
+  transform: translateY(20px);
+  transition:
+          opacity 1s ease-out,
+          transform 1s ease-out;
+}
+
+.fade-in-section.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.psyche-info {
+  margin: 20px 0;
+}
+
+.psyche-info-line {
+  margin: 10px 0;
+}
+
 /* Loading container styling */
 #loading-container {
   position: fixed;
   inset: 0;
   background-color: #20162f;
-  z-index: 2;
+  z-index: 6;
   opacity: 1;
   transition: opacity 700ms ease;
   padding: 20px;
   margin: 0 auto;
-  border-radius: 12px;
   display: flex;
   flex-direction: column;
   align-items: center;
