--- a/satellite_experience/assets/css/styles.css
+++ b/satellite_experience/assets/css/styles.css
@@ -36,6 +36,13 @@ body {
   box-sizing: border-box;
 }
 
+#distanceFields {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  width: 100%;
+}
+
 /* Navigation Buttons Styling */
 .navigation-button-container {
   position: absolute;
@@ -73,18 +80,37 @@ body {
 }
 
 /* Instrument Content Styling */
-#distanceTag {
+.distance {
   position: relative;
   width: 80%;
-  max-width: 600px;
+  justify-content: left;
   background-color: rgba(32, 22, 47, 0.8);
   border-radius: 10px;
-  color: #fff;
   font-size: 16px;
+  font-family: "OCR A Std, monospace";
   padding: 20px;
-  margin: 0 auto;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 20px;
   z-index: 5;
   box-sizing: border-box;
+}
+
+#timeRemaining {
+  font-size: 16px;
+  font-family: "OCR A Std, monospace";
+  justify-self: center !important;
+  width: 90%;
+  background-color: rgba(32, 22, 47, 0.2);
+  padding: 10px;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.distanceHeading {
+  font-size: 24px;
+  margin-bottom: 10px;
+  font-weight: bold;
 }
 
 #instrument-content {
@@ -186,6 +212,17 @@ body {
   line-height: 1.5;
   color: #fff;
   margin-bottom: 10px;
+}
+
+#phase-video {
+  /*height: auto;*/
+  height: 100%;
+  max-height: 150px;
+  border-radius: 10px;
+  border: none;
+  display: block;
+  margin: 0 auto;
+  width: 100%;
 }
 
 #phase-image {
@@ -423,161 +460,6 @@ input[type="range"]::-moz-range-thumb {
   border: 1px solid #f9a001;
   /*  slider progress  */
   box-shadow: -407px 0 0 400px #f9a001;
-}
-
-/* End of Settings Page/Modal */
-
-/* Launch Page */
-#container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  background-color: #ffffff;
-  align-items: center;
-  margin-left: 0vh;
-  margin-right: 0vh;
-  padding-left: 50px;
-  padding-right: 50px;
-  padding-top: 25px;
-  padding-bottom: 25px;
-  text-align: center;
-}
-#body {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
-}
-
-#psyche-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  background-image: linear-gradient(to right, #302144, #000000);
-  align-items: stretch;
-  width: calc(100% + 15px);
-  margin-left: -50px;
-  margin-right: -50px;
-  margin-top: -25px;
-  height: 15%;
-  padding-top: 5%;
-  padding-bottom: 25px;
-  padding-left: 10px;
-  padding-right: 75px;
-  text-align: center;
-}
-
-#psyche-icon {
-  align-self: center;
-  min-height: 75px;
-  min-width: 75px;
-  height: 15%;
-  width: 15%;
-  margin-left: 5%;
-}
-
-#disclaimer {
-  font-size: 12px;
-  color: grey;
-  border-color: grey;
-  border-width: 20px;
-}
-
-.psyche-info {
-  margin-top: 50px;
-  font-weight: bold;
-  border: 2px solid white;
-  color: black;
-}
-
-.psyche-info-line {
-  font-family: "Helvetica", sans-serif;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 1.4;
-  text-align: center;
-  color: #302144;
-  letter-spacing: -1px;
-}
-
-.psyche-info-headline {
-  font-family: "Helvetica", sans-serif;
-  font-weight: normal;
-  font-size: 30px;
-  line-height: 1.4;
-  text-align: center;
-  color: #302144;
-  letter-spacing: -1px;
-}
-
-.psyche-info-list {
-  font-weight: normal;
-  color: black;
-  text-align: left;
-  align-self: center;
-  list-style-type: disc;
-}
-
-#launch-button {
-  margin-top: 25px;
-  margin-bottom: 25px;
-  font-size: 20px;
-  color: white;
-  font-weight: bold;
-  background-color: #f9a000;
-  border: 2px 50% black;
-  border-radius: 16px;
-  height: 50px;
-  width: 75%;
-  cursor: pointer;
-  transition:
-    background-color 0.3s,
-    transform 0.1s;
-}
-
-#launch-button:active {
-  background: rgba(255, 255, 255, 0.5);
-  transform: scale(0.95);
-  border: none;
-}
-
-#launch-button:focus {
-  outline: none;
-}
-
-.psyche-satellite-img img {
-  margin-top: 25px;
-  width: 100%;
-}
-
-@media (min-width: 768px) {
-  #container {
-    margin-left: 25%;
-    margin-right: 25%;
-  }
-}
-
-.fade-in-section {
-  opacity: 0;
-  transform: translateY(20px);
-  transition:
-    opacity 1s ease-out,
-    transform 1s ease-out;
-}
-
-.fade-in-section.visible {
-  opacity: 1;
-  transform: translateY(0);
-}
-
-.psyche-info {
-  margin: 20px 0;
-}
-
-.psyche-info-line {
-  margin: 10px 0;
 }
 
 /* Loading container styling */
