--- a/satellite_experience/assets/css/high_contrast_mode.css
+++ b/satellite_experience/assets/css/high_contrast_mode.css
@@ -45,12 +45,12 @@ body {
 .navigation-button-container {
   position: absolute;
   bottom: 2%;
-  left: 50%;
+  left: 48%;
   transform: translateX(-50%);
   display: flex;
   flex-direction: row;
   align-items: baseline;
-  width: 95%;
+  width: 80%;
   max-width: 800px;
   z-index: 5;
   justify-content: space-around;
@@ -197,7 +197,19 @@ body {
   margin-top: 150px;
   z-index: 5;
   box-sizing: border-box;
-  bottom:7%;
+  bottom: 1%;
+}
+
+@media only screen and (min-height: 700px) {
+  #mission-content {
+    bottom: 0%;
+  }
+}
+
+@media only screen and (min-height: 1000px) {
+  #mission-content {
+    bottom: -10%;
+  }
 }
 
 #phase-title-container {
