--- a/satellite_experience/assets/css/light_mode.css
+++ b/satellite_experience/assets/css/light_mode.css
@@ -34,32 +34,40 @@ body {
   box-sizing: border-box;
 }
 
+#distanceFields {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  width: 100%;
+}
+
 /* Navigation Buttons Styling */
 .navigation-button-container {
   position: absolute;
-  bottom: 20px;
-  left: 50%;
+  bottom: 2%;
+  left: 48%;
   transform: translateX(-50%);
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  align-items: baseline;
   width: 80%;
   max-width: 800px;
   z-index: 5;
+  justify-content: space-around;
 }
 
 .navigation-button {
-  width: 50%;
+  width: 45%;
   max-width: 300px;
-  height: 60px;
+  height: 50px;
   background-color: rgba(255, 255, 255, 0.9) !important;
   color: black !important;
   border: none;
   border-radius: 10px;
-  font-size: 18px;
+  font-size: 14px;
   cursor: pointer;
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 0;
 }
 
 .navigation-button:last-child {
@@ -71,18 +79,40 @@ body {
 }
 
 /* Instrument Content Styling */
-#distanceTag {
+.distance {
   position: relative;
   width: 80%;
-  max-width: 600px;
+  justify-content: left;
   background-color: rgba(216, 211, 221, 1) !important;
   border-radius: 10px;
-  color: black !important;
-  font-size: 16px;
+  font-size: 14px;
+  font-family: "OCR A Std, monospace";
   padding: 20px;
-  margin: 0 auto;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 20px;
   z-index: 5;
   box-sizing: border-box;
+  color: black !important;
+}
+
+#timeRemaining {
+  font-size: 16px;
+  font-family: "OCR A Std, monospace";
+  justify-self: center !important;
+  width: 90%;
+  background-color: rgba(216, 211, 221, 1) !important;
+  color: black !important;
+  padding: 10px;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.distanceHeading {
+  font-size: 20px;
+  margin-bottom: 10px;
+  font-weight: bold;
+  color: black !important;
 }
 
 #instrument-content {
@@ -142,17 +172,30 @@ body {
 /* Mission Content Styling */
 #mission-content {
   position: relative;
-  width: 80%;
+  width: 90%;
   max-width: 600px;
   background-color: rgba(216, 211, 221, 1) !important;
   border-radius: 10px;
   color: black !important;
   font-size: 16px;
-  padding: 20px;
+  padding: 15px;
   margin: 0 auto;
   margin-top: 150px;
   z-index: 5;
   box-sizing: border-box;
+  bottom: 1%;
+}
+
+@media only screen and (min-height: 700px) {
+  #mission-content {
+    bottom: 0%;
+  }
+}
+
+@media only screen and (min-height: 1000px) {
+  #mission-content {
+    bottom: -10%;
+  }
 }
 
 #phase-title-container {
@@ -198,13 +241,40 @@ body {
 #phase-transition-button-container {
   display: flex;
   justify-content: space-between;
-  width: 80%;
+  width: 100%;
   max-width: 600px;
   margin: 10px auto 0;
 }
 
 #left-phase-transition-button,
 #right-phase-transition-button {
+  width: 42%;
+  height: 40px;
+  background-color: rgba(255, 255, 255, 0.9) !important;
+  color: black !important;
+  border: none;
+  border-radius: 10px;
+  font-size: 14px;
+  cursor: pointer;
+  text-align: center;
+  z-index: 5;
+}
+
+#left-phase-transition-button:hover,
+#right-phase-transition-button:hover {
+  background-color: rgba(255, 255, 255, 1) !important;
+}
+
+#instrument-transition-button-container {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  max-width: 600px;
+  margin: 10px auto 0;
+}
+
+#left-instrument-transition-button,
+#right-instrument-transition-button {
   width: 48%;
   height: 50px;
   background-color: rgba(255, 255, 255, 0.9) !important;
@@ -217,8 +287,8 @@ body {
   z-index: 5;
 }
 
-#left-phase-transition-button:hover,
-#right-phase-transition-button:hover {
+#left-instrument-transition-button:hover,
+#right-instrument-transition-button:hover {
   background-color: rgba(255, 255, 255, 1) !important;
 }
 
