--- a/satellite_experience/assets/css/about.css
+++ b/satellite_experience/assets/css/about.css
@@ -143,6 +143,6 @@ h1 {
   font-size: 8px;
   padding-top: 8px;
   padding-bottom: 8px;
-  padding-left: 30px;
-  padding-right: 30px;
+  padding-left: 33%;
+  padding-right: 33%;
 }
