--- a/satellite_experience/assets/css/about.css
+++ b/satellite_experience/assets/css/about.css
@@ -140,9 +140,9 @@ h1 {
 
 .disclaimer {
   color: white;
-  font-size: 8px;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  padding-left: 33%;
-  padding-right: 33%;
+  font-size: 9px;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  padding-left: 10%;
+  padding-right: 10%;
 }
