--- a/satellite_experience/assets/css/about.css
+++ b/satellite_experience/assets/css/about.css
@@ -1,7 +1,8 @@
 /* Basic reset for consistent styling across browsers */
 body,
 html {
-  margin: 0;
+  /*margin: 0;*/
+  margin: 10%;
   width: 100%;
   height: 100%;
   padding: 0;
@@ -141,8 +142,8 @@ h1 {
 .disclaimer {
   color: white;
   font-size: 9px;
-  padding-top: 2%;
-  padding-bottom: 2%;
+  padding-top: 1%;
+  padding-bottom: 1%;
   padding-left: 10%;
   padding-right: 10%;
 }
