--- a/satellite_experience/assets/css/about.css
+++ b/satellite_experience/assets/css/about.css
@@ -4,8 +4,7 @@ html {
   margin: 0;
   width: 100%;
   height: 100%;
-  padding: 10%;
-  /*padding: 0;*/
+  padding: 0;
   box-sizing: border-box;
   font-family: Arial, sans-serif;
 }
@@ -17,7 +16,8 @@ html {
   justify-content: flex-start;
   /* min-width: 100%; */
   /* min-height: 100vh; */
-  margin: 0;
+  /*margin: 0;*/
+  margin: 10%;
   /* background-color: #ffffff; */
 }
 
