--- a/satellite_experience/assets/css/about.css
+++ b/satellite_experience/assets/css/about.css
@@ -148,8 +148,9 @@ h1 {
 }
 
 .content-container {
-  /*padding-top: 1%;
-  padding-bottom: 1%;*/
+  /*padding-top: 1%;*/
+  /*padding-bottom: 1%;
   padding-left: 10%;
-  padding-right: 10%;
+  padding-right: 10%;*/
+  margin: 1px;
 }
