Settings radio buttons test1

--- a/satellite_experience/assets/css/styles.css
+++ b/satellite_experience/assets/css/styles.css
@@ -448,6 +448,11 @@ body {
   margin-top: 20%;
 }
 
+.invisibuttons {
+  background: transparent;
+  border: none;
+}
+
 #default-mode,
 #high-contrast-mode,
 #light-mode,
