Need to see the button

--- a/satellite_experience/assets/css/styles.css
+++ b/satellite_experience/assets/css/styles.css
@@ -449,8 +449,9 @@ body {
 }
 
 .invisibuttons {
-  background: transparent;
-  border: none;
+  /*background: transparent;*/
+  /*border: none;*/
+  color: red;
 }
 
 #default-mode,
